--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   bobby:
     docker:
-      - image: circleco/ruby:2.4.1
+      - image: circleci/ruby:2.4.1
     steps:
       - checkout
       - run: echo "A first hello"
   sally:
     docker:
-      - image: circleco/ruby:2.4.1
+      - image: circleci/ruby:2.4.1
     steps:
       - checkout
       - run: echo "Double trouble"
